# probabilistic-dynamic-semantics.github.io

./: README.md  components.html  components.md  documentation.html  documentation.md  index.html  index.md  installation.html  installation.md  probabilistic-dynamic-semantics.cabal  quickstart.html  quickstart.md  shell.nix  writing.html  writing.md
css/: print.css  screen.css  styles.css
src/: site.hs
templates/: layout.html
