name:               probabilistic-dynamic-semantics
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs:   src
  main-is:          site.hs
  build-depends:    base
                  , hakyll
                  , pandoc
                  , pandoc-types
  ghc-options:      -threaded
  default-language: Haskell2010
